PresidioTemplate.yml
Parameters:
  NetworkStackName:
    Description: >-
      Name of an active CloudFormation stack that contains the networking
      resources, such as the subnet and security group, that will be used in
      this stack.
    Type: String
    MinLength: 1
    MaxLength: 255
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access.
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair
  AmiId :
    Description: AMI Id for EC2
    Type : AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
  EnvironmentType:
    Description: Environment Name
    Type: String
    AllowedValues: [development, production]
    ConstraintDescription: must be development or production
#
Mappings:
  EnvironmentToInstanceType:
    development:
      instanceType: t2.micro
    production:
      instanceType: t2.small
#
Resources:
  KmsKey:
    Type: 'AWS::KMS::Key'
    Properties:
      Description: KMS Symetric Key
      Enabled: true
      KeyPolicy:
        Version: 2012-10-17
        Id: key-default-1
        Statement:
          - Sid: Enable IAM User Permissions
            Effect: Allow
            Principal:
              AWS: !Sub 'arn:aws:iam::${AWS::AccountId}:root'
            Action: 'kms:*'
            Resource: '*'
      KeySpec: SYMMETRIC_DEFAULT
      PendingWindowInDays: 7
  SecretManagerSecret:
    Type: 'AWS::SecretsManager::Secret'
    Properties:
      Description: Secret encrypted with a KMS CMK
      GenerateSecretString:
        SecretStringTemplate: '{"username": "TestUser"}'
        GenerateStringKey: password
        PasswordLength: 16
        ExcludeCharacters: '":;@/\'
      KmsKeyId: !Ref KmsKey
      Name: TestSecret
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      KeyName: !Ref KeyName
      ImageId: !Ref AmiId
      IamInstanceProfile: !Ref InstanceProfile
      InstanceType: !FindInMap [EnvironmentToInstanceType, !Ref 'EnvironmentType', instanceType]
      SubnetId:
        Fn::ImportValue:
              !Sub '${NetworkStackName}-PublicSubnet'
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          aws secretsmanager get-secret-value \
            --region ${AWS::Region} \
            --secret-id TestSecret \
            --query SecretString \
            >> /home/ec2-user/secret.txt

  EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      InstanceId: !Ref EC2Instance

  S3Bucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      VersioningConfiguration:
        Status: Enabled

  SecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allows SSH in on port 22 and all traffic out
      GroupName: TestSG
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      VpcId:
        Fn::ImportValue:
              !Sub '${NetworkStackName}-VpcId'
  InstanceProfile:
    Type: 'AWS::IAM::InstanceProfile'
    Properties:
      InstanceProfileName: InstanceProfile
      Path: /
      Roles:
        - !Ref EC2Role
  EC2Role:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: GetSecret
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'secretsmanager:GetSecretValue'
                  - 'secretsmanager:DescribeSecret'
                  - 'kms:Decrypt'
                Resource:
                  - !Ref SecretManagerSecret
                  - !GetAtt KmsKey.Arn
              - Effect: Allow
                Action:
                  - 's3:GetObject'
                  - 's3:PutObject'
                  - 's3:PutObjectAcl'
                Resource:
                  - !GetAtt S3Bucket.Arn
  BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3Bucket
      PolicyDocument:
        Id: S3BucketPolicy
        Version: 2012-10-17
        Statement:
        - Action:
            - 's3:DeleteObject'
            - 's3:GetObject'
            - 's3:PutObject'
          Effect: Allow
          Resource:
            - !Sub 'arn:aws:s3:::${S3Bucket}'
            - !Sub 'arn:aws:s3:::${S3Bucket}/*'
          Principal:
            AWS: !GetAtt EC2Role.Arn
